2009-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (ELCFILES): Add ede/shell.

2009-10-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/common-win.el (x-colors): Purecopy it.

2009-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-data-swapped-p): Make the assertion a bit more
	permissive for when the buffer is empty.
	(tar-header-block-tokenize): Decode the username and groupname.
	(tar-chown-entry, tar-chgrp-entry): Encode the names (bug#4730).

2009-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/srecode/srt.el:
	* cedet/srecode/compile.el:
	* cedet/semantic/mru-bookmark.el:
	* cedet/semantic/debug.el:
	* cedet/semantic/complete.el:
	* cedet/semantic/analyze.el: Require CL when compiling.

2009-10-17  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/scope.el
	(semantic-analyze-scoped-inherited-tag-map): Wrap calculation of
	tmpscope so that the regular scope will continue to work.

	* cedet/semantic/idle.el (semantic-idle-tag-highlight):
	Use semantic-idle-summary-highlight-face as the highlighting.

	* emacs-lisp/eieio-base.el (eieio-persistent-save): If buffer
	contains multibyte characters, choose first applicable coding
	system automatically.

	* cedet/ede/project-am.el (project-run-target): New method.
	(project-run-target): New method.

	* cedet/ede.el (ede-target): Add run target menu item.
	(ede-project, ede-minor-keymap): Add ede-run-target binding.
	(ede-run-target): New function.
	(ede-target::project-run-target): New method.

	* cedet/ede/proj.el (project-run-target): New method.

	* cedet/ede/proj-shared.el (ede-gcc-libtool-shared-compiler)
	(ede-g++-libtool-shared-compiler): Remove SHELL.  Remove COMMANDS.
	Add :rules.
	(ede-proj-target-makefile-shared-object): Only libtool compilers
	now available.  Add linkers for libtool.
	(ede-cc-linker-libtool, ede-g++-linker-libtool): New.
	(ede-proj-makefile-target-name): Always use .la extension.

	* cedet/ede/proj-prog.el (project-run-target): New method.
